Add web files to frontend container

--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -5,14 +5,9 @@ COPY go.mod go.sum ./
 COPY cmd ./cmd
 COPY internal ./internal
 COPY vendor ./vendor
-RUN go mod download
-RUN GOOS=linux GOARCH=arm64 go build -o /mqtt-topic-frontend /app/cmd/frontend
+RUN go mod download RUN GOOS=linux GOARCH=arm64 go build -o /mqtt-topic-frontend /app/cmd/frontend FROM debian:latest WORKDIR /run COPY --from=builder /mqtt-topic-frontend /bin/mqtt-topic-frontend COPY web ./web
+RUN chmod +x /bin/mqtt-topic-frontend -t /run/web/templates
 
-
-FROM debian:latest
-
-COPY --from=builder /mqtt-topic-frontend /bin/mqtt-topic-frontend
-RUN chmod +x /bin/mqtt-topic-frontend
 
 EXPOSE 8080
 
