--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     command: /bin/mqtt-topic-tracker --db /mqtt_data/topics.db
     volumes:
       - type: bind
-        source: /mqtt_data
+        source: ./mqtt_data
         target: /mqtt_data
 
   frontend:
@@ -20,7 +20,7 @@ services:
     command: /bin/mqtt-topic-frontend --db /mqtt_data/topics.db
     volumes:
       - type: bind
-        source: /mqtt_data
+        source: ./mqtt_data
         target: /mqtt_data
       - type: bind
         source: ./mqtt-topic-tracker/web
